# dns-zone-checker

./: .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  repo.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml
dns_zone_checker/: __init__.py  cli.py
docs/: api.md  installation.md  usage.md
tests/: __init__.py  test_app.py
